[autofill]Always override autocomplete=tel/tel-* with server prediction for phones.

Many web sites set autocomplete to wrong tel types. For example, they set it to
tel but then expects a national number(Sephora.com). This change overrides all fields
with autocomplete attribute set to tel/tel-* with server predictions, as long as
server thinks it's a phone number field as well.

Bug: 791569
Change-Id: If2c8bea2e0f7d1fed71f019d4756670e62e8ce1c
Reviewed-on: https://chromium-review.googlesource.com/809092
Commit-Queue: Hui Wu <wuandy@chromium.org>
Reviewed-by: Roger McFarlane <rogerm@chromium.org>
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522093}
Former-commit-id: 449cae27aa8a3053f77fb8e9d440c62be77e88a6