components/autofill/core/browser/autofill_type.h
@@ -11,14 +11,23 @@
 
 namespace autofill {
 
+// Help method that takes a |ServerFieldType| and returns it's corresponding
+// |FieldTypeGroup| value.
+FieldTypeGroup GroupTypeOfServerFieldType(ServerFieldType field_type);
+
+// Help method that takes a |HtmlFieldType| and |HtmlFieldMode|, then returns
+// their corresponding |FieldTypeGroup| value.
+FieldTypeGroup GroupTypeOfHtmlFieldType(HtmlFieldType field_type,
+                                        HtmlFieldMode field_mode);
+
 // The high-level description of Autofill types, used to categorize form fields
 // and for associating form fields with form values in the Web Database.
 class AutofillType {
  public:
   explicit AutofillType(ServerFieldType field_type);
   AutofillType(HtmlFieldType field_type, HtmlFieldMode mode);
-  AutofillType(const AutofillType& autofill_type);
-  AutofillType& operator=(const AutofillType& autofill_type);
+  AutofillType(const AutofillType& autofill_type) = default;
+  AutofillType& operator=(const AutofillType& autofill_type) = default;
 
   HtmlFieldType html_type() const { return html_type_; }
 
